# NMEA-with-file

./: CMakeLists.txt
cpp_parser/: nmea_parse.cpp
server/: server.js
